<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Application Name -->
    <string name="app_name">Friend Locator</string>

    <!-- Activity Names -->
    <string name="title_activity_welcome">Welcome to Friend Locator!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_password_recovery">Recover Password</string>
    <string name="title_activity_main">Main Activity</string>
    <string name="title_activity_friends">Friends</string>
    <string name="title_activity_friends_invitation_pending">Pending Invitations</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Title Names -->
    <string name="welcome_page_title">Welcome to Friend Locator!</string>
    <string name="login_title">Sign in to Friend Locator!</string>
    <string name="register_title">Register with Friend Locator!</string>
    <string name="action_settings">Settings</string>

    <!-- Buttons -->
    <string name="sign_in_button">Sign In</string>
    <string name="register_button">Register</string>
    <string name="recover_password_button">Recover Password</string>
    <string name="submit_button">Submit</string>
    <string name="cancel_button">Cancel</string>

    <!-- Text URLs -->
    <string name="register_link">Register!</string>
    <string name="forgot_link">Forgot your password?</string>

    <!-- Form Placeholders -->
    <string name="hint_name">Name</string>
    <string name="hint_name_new">New Name</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_new">New Password</string>
    <string name="hint_password_verify">Verify Password</string>

    <!-- Text Strings -->
    <string name="have_no_account">Have no account?</string>
    <string name="user_account">User Account</string>
    <string name="logout">Logout</string>
    <string name="change_password">Change Password</string>
    <string name="update_account">Update Account</string>
    <string name="app_details">Application Details</string>
    <string name="help_title">Help</string>
    <string name="help_subtitle">Get some help how to use the application</string>
    <string name="version_title">Version</string>
    <string name="version_subtitle">1.1.0</string>
    <string name="header_activity_pending_invitations">Pending friend invitations</string>
    <string name="invitations_pending">Have Pending Invitations!</string>

    <!-- Buttons -->
    <string name="button_accept">Accept</string>
    <string name="button_decline">Decline</string>

    <!-- Views -->
    <string name="no_friends_found">No friends found.</string>


</resources>
