<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_1080x1920">


    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:keepScreenOn="true"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:textSize="28sp"
        android:paddingBottom="350dp"
        android:gravity="center"
        android:fontFamily="sans-serif-light"
        android:text="@string/register_title"
        />

    <RelativeLayout
        android:layout_width="300dip"
        android:layout_height="360dip"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="150dp">

        <EditText
            android:id="@+id/name"
            android:layout_marginTop="0dp"
            android:layout_height="60dp"
            android:paddingLeft="5dp"
            android:hint="@string/hint_name"
            android:layout_width="fill_parent"
            android:textSize="15dp"
            android:textColor="#000000"
            android:inputType="textNoSuggestions|textPersonName"
            android:background="@drawable/textlines"
            android:singleLine="true"
        />

        <EditText
            android:id="@+id/emailAddress"
            android:layout_marginTop="70dp"
            android:layout_height="60dp"
            android:paddingLeft="5dp"
            android:hint="@string/hint_email"
            android:layout_width="fill_parent"
            android:textSize="15dp"
            android:textColor="#000000"
            android:inputType="textNoSuggestions|textEmailAddress"
            android:background="@drawable/textlines"
            android:singleLine="true"
        />

        <EditText
            android:id="@+id/password"
            android:layout_marginTop="140dp"
            android:layout_height="60dp"
            android:paddingLeft="5dp"
            android:hint="@string/hint_password"
            android:layout_width="fill_parent"
            android:textSize="15dp"
            android:textColor="#000000"
            android:inputType="textNoSuggestions|textPassword"
            android:background="@drawable/textlines"
            android:singleLine="true"
        />

        <EditText
            android:id="@+id/passwordVerify"
            android:layout_marginTop="210dp"
            android:layout_height="60dp"
            android:paddingLeft="5dp"
            android:hint="@string/hint_password_verify"
            android:layout_width="fill_parent"
            android:textSize="15dp"
            android:textColor="#000000"
            android:inputType="textNoSuggestions|textPassword"
            android:background="@drawable/textlines"
            android:singleLine="true"
        />

        <Button
            android:id="@+id/button"
            android:color="@color/blue_button"
            android:layout_centerInParent="true"
            android:layout_alignParentTop="true"
            android:layout_height="60dip"
            android:layout_width="300dp"
            android:layout_marginTop="280dp"
            android:text="@string/register_button"
            android:onClick="onRegisterClick"
            android:textColor="@color/white"
            android:clickable="true"
            android:background="@color/black_button"
        />


    </RelativeLayout>


</RelativeLayout>