<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_1080x1920">


    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:keepScreenOn="true"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="28sp"
        android:paddingBottom="350dp"
        android:gravity="center"
        android:fontFamily="sans-serif-light"
        android:text="@string/welcome_page_title"
    />

    <Button
        android:id="@+id/button"
        android:color="@color/blue_button"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:layout_height="60dip"
        android:layout_width="300dip"
        android:layout_marginBottom="160px"
        android:textColor="@color/white"
        android:text="@string/sign_in_button"
        android:onClick="onSignInClick"
        android:clickable="true"
        android:background="@color/black_button"
    />

    <RelativeLayout
        android:layout_width="220dip"
        android:layout_height="40dip"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20px"
            android:layout_weight="0.33">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="0.5"
                android:layout_marginRight="10px"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:fontFamily="sans-serif-light"
                android:text="@string/have_no_account"
            />

            <TextView
                android:id="@+id/textLink"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="0.5"
                android:layout_marginRight="10px"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:fontFamily="sans-serif-light"
                android:onClick="onRegisterClick"
                android:clickable="true"
                android:text="@string/register_link"
            />

        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>