<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_1080x1920">


    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:keepScreenOn="true"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:textSize="28sp"
        android:paddingBottom="350dp"
        android:gravity="center"
        android:fontFamily="sans-serif-light"
        android:text="@string/login_title"
        />

    <RelativeLayout
        android:layout_width="300dip"
        android:layout_height="220dip"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="150dp">

            <EditText
                android:id="@+id/emailAddress"
                android:layout_marginTop="0dp"
                android:layout_height="60dp"
                android:paddingLeft="5dp"
                android:hint="@string/hint_email"
                android:layout_width="fill_parent"
                android:textSize="15dp"
                android:textColor="#000000"
                android:inputType="textNoSuggestions|textEmailAddress"
                android:background="@drawable/textlines"
            />

            <EditText
                android:id="@+id/password"
                android:layout_marginTop="70dp"
                android:layout_height="60dp"
                android:paddingLeft="5dp"
                android:hint="@string/hint_password"
                android:layout_width="fill_parent"
                android:textSize="15dp"
                android:textColor="#000000"
                android:inputType="textNoSuggestions|textPassword"
                android:background="@drawable/textlines"
            />

            <Button
                android:id="@+id/button"
                android:color="@color/blue_button"
                android:layout_centerInParent="true"
                android:layout_alignParentTop="true"
                android:layout_height="60dip"
                android:layout_width="300dp"
                android:layout_marginTop="140dp"
                android:text="@string/sign_in_button"
                android:onClick="onSignInClick"
                android:textColor="@color/white"
                android:clickable="true"
                android:background="@color/black_button"
            />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="220dip"
        android:layout_height="40dip"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20px"
            android:layout_weight="0.33">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_height="fill_parent"
                android:layout_weight="0.5"
                android:layout_marginRight="10px"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:fontFamily="sans-serif-light"

                android:onClick="onPasswordRecoverClick"
                android:clickable="true"
                android:text="@string/forgot_link"
            />

        </LinearLayout>

    </RelativeLayout>




</RelativeLayout>