<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="360dip"
        android:layout_height="310dip"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp">

        <RelativeLayout
            android:layout_width="340dip"
            android:layout_height="310dip"
            android:layout_centerInParent="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <EditText
                android:id="@+id/password"
                android:layout_marginTop="0dp"
                android:layout_height="60dp"
                android:paddingLeft="5dp"
                android:hint="@string/hint_password_new"
                android:layout_width="fill_parent"
                android:textSize="15dp"
                android:textColor="#000000"
                android:inputType="textNoSuggestions|textPassword"
                android:background="@drawable/textlines"
                />

            <EditText
                android:id="@+id/passwordVerify"
                android:layout_marginTop="70dp"
                android:layout_height="60dp"
                android:paddingLeft="5dp"
                android:hint="@string/hint_password_verify"
                android:layout_width="fill_parent"
                android:textSize="15dp"
                android:textColor="#000000"
                android:inputType="textNoSuggestions|textPassword"
                android:background="@drawable/textlines"
                />

            <Button
                android:id="@+id/submitButton"
                android:layout_centerInParent="true"
                android:layout_alignParentTop="true"
                android:layout_height="60dip"
                android:layout_width="300dp"
                android:layout_marginTop="140dp"
                android:text="@string/submit_button"
                android:onClick="onSubmitClick"
                android:textColor="@color/white"
                android:clickable="true"
                android:background="@color/black_button"
                />

            <Button
                android:id="@+id/cancelButton"
                android:layout_centerInParent="true"
                android:layout_alignParentTop="true"
                android:layout_height="60dip"
                android:layout_width="300dp"
                android:layout_marginTop="210dp"
                android:text="@string/cancel_button"
                android:onClick="onCancelClick"
                android:textColor="@color/white"
                android:clickable="true"
                android:background="@color/red_dark"
                />


        </RelativeLayout>

    </RelativeLayout>


</RelativeLayout>